tests/src/frontend/syntax/invalid/lambda_named_parameter_default_value.sk
fun main(): String {
  x = {p = "Fail"} ~> p;
  x{}
}
